重构调度任务系统与优化HTML渲染：调整包结构、修正导入、完善实体与DTO，新增插件与任务相关响应类及事件定义，以及更多的webui接口